Images need to have their z-index fixed.

--- a/css/mag.scss
+++ b/css/mag.scss
@@ -613,6 +613,12 @@ footer
 	{
 		opacity: 1 !important;
 		z-index: 2 !important;
+		
+		img
+		{
+			opacity: 1;
+			z-index: 2;
+		}
 	}
 	
 	> a > span
@@ -625,6 +631,12 @@ footer
 {
 	z-index: 1;
 	opacity: 1;
+	
+	img
+	{
+		z-index: 1;
+		opacity: 1;
+	}
 }
 
 img[alt=indicator]
